--- a/src/service/TRex/src/tools/VSS.TRex.Webtools/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/service/TRex/src/tools/VSS.TRex.Webtools/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -50,6 +50,11 @@
             <span class='fas fa-sort-amount-up'></span> Delete Project
           </a>
         </li>
+        <li class="nav-item" [routerLinkActive]='["link-active"]'>
+          <a [routerLink]='["/rebuild-project"]' class="nav-link" (click)='collapse()'>
+            <span class='fas fa-sort-amount-up'></span> Rebuild Project
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
